# llmstart-homework

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.cursor/rules/: conventions.mdc  workflow.mdc
doc/: conventions.md  product_idea.md  tasklist.md  vision.md
doc/guides/: botfather.md  cloud_deployment.md  docker.md  openrouter.md
prompts/: cat_mode.txt  dramatic_mode.txt  system.txt  villain_mode.txt
src/: bot.py  env_test.py  llm.py  main.py  memory.py  prompts.py  scenarios.py  styles.py
tests/: __init__.py  test_bot.py  test_llm.py  test_prompts.py
